--- a/src/components/Maincontent/Incart.scss
+++ b/src/components/Maincontent/Incart.scss
@@ -1,15 +1,10 @@
 .popUpWraper {
   position: fixed;
-  top: -100px;
-  left: -140px;
-  // right: 0;
+  top: -60px;
   bottom: 0;
+  left: 0;
   margin: auto;
-
-  width: 100%;
-  // height: 100vh;
-
-  // transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  width: 1100px;
   background-color: rgba(0, 0, 0, 0);
   color: black;
   display: flex;
